--- a/openhpi/trunk/plugins/Makefile.am
+++ b/openhpi/trunk/plugins/Makefile.am
@@ -32,7 +32,7 @@
 MAINTAINERCLEANFILES 	= Makefile.in
 
 SUBDIRS = @IPMI@ @WATCHDOG@ @SYSFS@ @SNMP_BC@ @IPMIDIRECT@ @DYNAMIC_SIMULATOR@ @SIMULATOR@ \
-	  @RTAS@ @ILO2_RIBCL@ @OA_SOAP@ @SLAVE@
+	  @RTAS@ @ILO2_RIBCL@ @OA_SOAP@ @SLAVE@ @TEST_AGENT@
 DIST_SUBDIRS =	ipmi \
 		watchdog \
 		sysfs \
@@ -43,5 +43,6 @@ DIST_SUBDIRS =	ipmi \
 		rtas \
 		ilo2_ribcl \
 		oa_soap \
-		slave
+		slave \
+		test_agent
 
