More on Feature Request #3307756 : Implemented annunciator support

--- a/openhpi/trunk/plugins/test_agent/Makefile.am
+++ b/openhpi/trunk/plugins/test_agent/Makefile.am
@@ -25,6 +25,8 @@ pkglib_LTLIBRARIES = libtest_agent.la
 
 libtest_agent_la_SOURCES = abi.cpp \
                            abi.h \
+                           announcement.cpp \
+                           announcement.h \
                            annunciator.cpp \
                            annunciator.h \
                            area.cpp \
