--- a/openhpi/trunk/docs/Makefile.am
+++ b/openhpi/trunk/docs/Makefile.am
@@ -32,5 +32,5 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in 
 
-SUBDIRS			= @HLD@ @MAN@
-DIST_SUBDIRS		= hld man
+SUBDIRS			= @MAN@
+DIST_SUBDIRS		= man
