--- a/openhpi/trunk/openhpiclient.conf.example
+++ b/openhpi/trunk/openhpiclient.conf.example
@@ -1,6 +1,14 @@
 ### OpenHPI client library configuration example file ###
 
 #######
+## Section: My Entity
+##          Specifies the EntityPath of the entity upon which the HPI User is running.
+#
+## Example entity declaration:
+#
+# my_entity = "{RACK,1}{SYSTEM_CHASSIS,2}"
+
+#######
 ## Section: Domains
 ##          Since each openhpi daemon instance manages a hpi domain, 
 #           each domain declaration specifies domain number, hpi daemon host and hpi daemon port.
