First commit for feature requests: #3497551 #3497552 #3497553

--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -61,7 +61,7 @@ MOSTLYCLEANFILES        = tags
 
 
 SUBDIRS                 = utils scripts @SSLDIR@ @SNMPDIR@ transport marshal baselib @ENABLED_DIRS@ plugins docs hpi_shell
-DIST_SUBDIRS            = utils scripts ssl snmp transport marshal baselib openhpid plugins docs clients cpp hpi_shell
+DIST_SUBDIRS            = utils scripts ssl snmp transport marshal baselib openhpid plugins docs clients cpp hpi_shell baselibs
 
 
 DISTCHECK_CONFIGURE_FLAGS = --with-initdir=prefix
