--- a/openhpi/branches/3.0.x/plugins/ilo2_ribcl/Makefile.am
+++ b/openhpi/branches/3.0.x/plugins/ilo2_ribcl/Makefile.am
@@ -64,6 +64,6 @@ libilo2_ribcl_la_SOURCES  =	\
 				ilo2_ribcl_xml.h \
 				ilo2_ribcl_cmnds.h
 
-libilo2_ribcl_la_LIBADD   = @SSL_LIB@ @XML2_LIB@ -luuid $(top_builddir)/utils/libopenhpiutils.la
+libilo2_ribcl_la_LIBADD   = @SSL_LIB@ @XML2_LIB@ $(top_builddir)/utils/libopenhpiutils.la
 libilo2_ribcl_la_LDFLAGS  = -module -version-info @HPI_LIB_VERSION@
 
