--- a/openhpi/branches/3.0.x/plugins/sysfs/Makefile.am
+++ b/openhpi/branches/3.0.x/plugins/sysfs/Makefile.am
@@ -38,5 +38,5 @@ INCLUDES		= @OPENHPI_INCLUDES@  -I/usr/include/sysfs
 pkglib_LTLIBRARIES		= libsysfs2hpi.la
 
 libsysfs2hpi_la_SOURCES	= sysfs2hpi.c 
-libsysfs2hpi_la_LIBADD	= -lsysfs -luuid $(top_builddir)/utils/libopenhpiutils.la
+libsysfs2hpi_la_LIBADD	= -lsysfs $(top_builddir)/utils/libopenhpiutils.la
 libsysfs2hpi_la_LDFLAGS	= -module -version-info @HPI_LIB_VERSION@
