--- a/openhpi/trunk/plugins/test_agent/Makefile.mingw32
+++ b/openhpi/trunk/plugins/test_agent/Makefile.mingw32
@@ -16,6 +16,7 @@ SRC := abi.cpp \
        instrument.cpp \
        instruments.cpp \
        inventory.cpp \
+       log.cpp \
        object.cpp \
        resource.cpp \
        sensor.cpp \
