--- a/openhpi/trunk/plugins/test_agent/Makefile.am
+++ b/openhpi/trunk/plugins/test_agent/Makefile.am
@@ -63,6 +63,8 @@ libtest_agent_la_SOURCES = abi.cpp \
                            server.h \
                            structs.cpp \
                            structs.h \
+                           test.cpp \
+                           test.h \
                            timers.cpp \
                            timers.h \
                            utils.cpp \
