--- a/openhpi/trunk/plugins/test_agent/Makefile.mingw32
+++ b/openhpi/trunk/plugins/test_agent/Makefile.mingw32
@@ -22,6 +22,7 @@ SRC := abi.cpp \
        sensor.cpp \
        server.cpp \
        structs.cpp \
+       test.cpp \
        timers.cpp \
        utils.cpp \
        vars.cpp \
