--- a/openhpi/trunk/openhpi.conf.example
+++ b/openhpi/trunk/openhpi.conf.example
@@ -193,6 +193,12 @@ handler libsimulator {
 #        STANDBY_OA = "hostname" # Standby OA hostname or IP address (optional)
 #}
 
+## Section for sysfs plugin
+#handler libsysfs2hpi {
+#        # Mandatory.
+#        entity_root = "{SYSTEM_CHASSIS,9}"
+#}
+
 ## Section for dynamic_simulator plugin
 #handler libdyn_simulator {
 #        entity_root = "{SYSTEM_CHASSIS,9}"
