Initial implementation of feature request #3530528

--- a/openhpi/trunk/baselibs/csharp/Makefile
+++ b/openhpi/trunk/baselibs/csharp/Makefile
@@ -1,9 +1,9 @@
 MCS := dmcs
 MONO := mono
 
-.PHONY: all openhpi_baselib example example_iterators
+.PHONY: all openhpi_baselib example example_iterators example_handlers
 
-all: example example_iterators
+all: example example_iterators example_handlers
 
 openhpi_baselib:
 	${MCS} @openhpi_baselib.rsp
@@ -14,5 +14,8 @@ example: openhpi_baselib
 example_iterators: openhpi_baselib 
 	${MCS} @example_iterators.rsp
 
+example_handlers: openhpi_baselib 
+	${MCS} @example_handlers.rsp
+
 clean:
-	rm -f example.exe example_iterators.exe openhpi_baselib.dll
+	rm -f example.exe example_iterators.exe example_handlers.exe openhpi_baselib.dll
