--- a/openhpi/trunk/baselibs/java/build.xml
+++ b/openhpi/trunk/baselibs/java/build.xml
@@ -1,9 +1,15 @@
 <project name="OpenHPI" default="all">
-    <target name="all" depends="example:compile"/>
+    <target name="all" depends="example:compile,example_handlers:compile"/>
 
     <target name="example:compile" depends="openhpi_baselib:jar">
         <javac destdir="build">
             <src path="example"/>
+        </javac>
+    </target>
+
+    <target name="example_handlers:compile" depends="openhpi_baselib:jar">
+        <javac destdir="build">
+            <src path="example_handlers"/>
         </javac>
     </target>
 
