--- a/openhpi/trunk/plugins/test_agent/Makefile.am
+++ b/openhpi/trunk/plugins/test_agent/Makefile.am
@@ -31,6 +31,8 @@ libtest_agent_la_SOURCES = abi.cpp \
                            annunciator.h \
                            area.cpp \
                            area.h \
+                           bank.cpp \
+                           bank.h \
                            codec.cpp \
                            codec.h \
                            console.cpp \
