--- a/openhpi/trunk/plugins/test_agent/Makefile.mingw32
+++ b/openhpi/trunk/plugins/test_agent/Makefile.mingw32
@@ -6,6 +6,7 @@ SRC := abi.cpp \
        announcement.cpp \
        annunciator.cpp \
        area.cpp \
+       bank.cpp \
        codec.cpp \
        console.cpp \
        control.cpp \
