--- a/openhpi/branches/3.2.x/Makefile.am
+++ b/openhpi/branches/3.2.x/Makefile.am
@@ -44,7 +44,10 @@ EXTRA_DIST              = openhpi.spec.in \
 	simulation.data.example \
 	test_agent.data.example \
 	openhpiclient.conf.example \
+	README.csharp \
 	README.daemon \
+	README.java \
+	README.python \
 	README.windows \
 	Makefile.mingw32 \
 	Makefile.mingw32.def \
